# algolabra

./: .coveragerc  README.md  main.py  pyproject.toml  tasks.py
algolabra/: main.py
algolabra/astar/: astar.py  astar_thread.py
algolabra/bostonmaps/: map_component.py
algolabra/common_search_utils/: check_movingai_ideal_solutions.py  check_solution.py  children.py  children_old.py  heuristics.py  result_utils.py  search_thread.py  timed_search.py
algolabra/fileIO/: read_files.py
algolabra/fringe/: basic_fringe.py  dequef.py  dll_clean.py  doublelinkedlist.py  doublelinkedlistWithDict.py  fast_version_with_deque.py  fringe_for_livetab.py  fringe_incremental.py  fringe_live_thread.py  fringe_search.py  fringe_testbed.py  fringe_thread.py  fringe_with_dll.py  fringe_with_linked_dict.py  fringe_with_linked_map.py  fringe_with_logging.py  fringe_with_loggings.py  fringe_with_od.py  fringe_with_signals.py  fringe_with_two_deques.py  linked_dict.py  linked_dict_for_fringe.py  linked_map.py  linked_map_dict.py  linked_map_od_1.py  new_loggings.py  new_thread.py  od_fringe.py  ordered_set_tester.py  ordered_set_version2.py  ordered_set_version3.py  plain_dict_version.py  testbed_dll.py  timed_fringe.py  timed_fringe_test_dlls.py
algolabra/scenarios/: scenarios.py  (+1 more)
documentation/: color_scheme.md  data_structs.md  fringe_pseudocode_from_pdf.md  implementation_document.md  progress_report_week_3.md  progress_report_week_4.md  progress_report_week_5.md  progress_report_week_6.md  requirements_specification.md  resources.md  test_runs.md  testing_report.md  user_manual.md
(+36 files in other folders)
