[tool.poetry]
name = "algolabra"
version = "0.1.0"
description = ""
authors = ["Samuli Nikkilä <sanikk@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
invoke = "^2.2.0"
pyqt6-qt6 = "^6.7.3"
pyqt6 = "^6.7.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
coverage = "^7.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
